# wilson

./: README.md  Wylson.ipynb  colab_bootstrap_shim.py  colab_launcher.py  pyproject.toml  requirements.txt
docs/: app.html  data.json  index.html
knowledge/: browser-automation.md  budget-drift-recovery.md
ouroboros/: agent.py  budget_tracker.py  config.py  consciousness.py  context.py  context_core.py  health_invariants.py  llm.py  loop.py  memory.py  memory_build.py  pricing.py  review.py  tool_composer.py  tool_executor.py  types.py  utils.py
ouroboros/tools/: browser_automation.py  dashboard.py  search.py
prompts/: CONSCIOUSNESS.md  SYSTEM.md
supervisor/: config_loader.py  context.py  events.py  git_ops.py  main_loop.py  state.py  workers.py
tests/: test_atomic.py  test_smoke.py
